# arch-toolkit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  clippy.toml  rustfmt.toml
.cursor/commands/: pr-update.md  pr.md  release-new.md  summary.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: doc-rust.yml  release.yml
dev/: AUR_TOOLKIT_CRATE_PREPARATION.md  DEPENDENCIES_MODULE_PHASE.md  FRAMEWORK_AGNOSTIC_FILES.md  INDEX_MODULE_PHASE.md  Makefile
dev/IMPROVEMENTS/: I18N_PROPOSAL.md  improve_dev_usability and robustness.md
dev/WORKFLOWS/: RELEASE_WORKFLOW.md
dev/scripts/: complexity_report.sh  generate_controlflow_diagram.sh  generate_docs.sh  module_structure.sh  release.fish  test_archlinux.org.sh
examples/: aur_example.rs  deps_example.rs  deps_types_example.rs  env_config.rs  health_check.rs  mock_testing.rs  parse_example.rs  pkgbuild_example.rs  query_example.rs  resolve_example.rs  reverse_example.rs  rich_error_context.rs  source_example.rs  srcinfo_example.rs  version_example.rs  with_caching.rs
src/: client.rs  env.rs  error.rs  health.rs  lib.rs  prelude.rs
src/aur/: comments.rs  info.rs  mock.rs  mod.rs  pkgbuild.rs  search.rs  traits.rs  utils.rs  validation.rs
src/cache/: config.rs  disk.rs  memory.rs  mod.rs
src/index/: explicit.rs  fetch.rs  installed.rs  mod.rs  query.rs
src/types/: dependency.rs  health.rs  index.rs  mod.rs  package.rs
tests/: cache_integration.rs  deps_integration.rs  index_integration.rs
